--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,8 +30,8 @@ set-option -g bell-action none
 set -g status-position bottom
 set -g status-justify left
 set -g status-bg colour8
-set -g status-fg blue
-set -g status-right ' #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)    #{=50:pane_current_path}   %b %d %H:%M '
+set -g status-fg black
+set -g status-right '#{pane_current_command}  #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)    #{=50:pane_current_path}   %b %d %H:%M '
 set -g status-right-length 200
 set -g status-left ''
 set -sg escape-time 0
