yesyes it's update time

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -58,7 +58,7 @@ font-8 = "Noto Sans:size=18"
 font-9 = "Noto Sans JP:10;4"
 
 # Default
-modules-left = network
+modules-left = network sep upt
 modules-center = bspwm
 modules-right = battery sep volume sep brightness sep time
 
