--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,7 +22,7 @@ bottom = false
 fixed-center = true
 
 width = 98%
-height = 30
+height = 35
 
 offset-x = 1%
 offset-y = 1%
@@ -57,16 +57,15 @@ font-7 = "JetBrainsMono Nerd Font:style:medium:size=11"
 font-8 = "Noto Sans:size=18"
 font-9 = "Noto Sans JP:10;4"
 
-# Default
 modules-left = network sep upt
-modules-center = bspwm
-modules-right = battery sep volume sep brightness sep time
+modules-center = pac bspwm
+modules-right = battery sep volume sep time spacing
 
 spacing = 0
 dim-value = 1.0
 
 tray-position = right
-tray-detached = false
+tray-detached = true
 tray-maxsize = 16
 tray-background = ${color.background}
 tray-offset-x = 0
