--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,7 +27,8 @@ confirm_os_window_close 0
 
 # Dark
 
-background              #002b36
+#background              #002b36 # solarized
+background               #11111b
 foreground              #839496
 cursor                  #93a1a1
 
@@ -146,3 +147,5 @@ map kitty_mod+t     new_tab
 map cmd+t           new_tab
 map kitty_mod+equal     change_font_size all +2.0
 map kitty_mod+minus     change_font_size all -2.0
+
+include ~/.cache/wal/colors-kitty.conf
