--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,16 +5,15 @@ set $mod Mod1
 
 font GohuFont Nerd Font Mono 12
 
-exec --no-startup-id kitty
-exec --no-startup-id walp
+exec --no-startup-id wallpaper-pywal
 exec --no-startup-id xautolock -detectsleep -time 15 -locker /home/ahwx/.local/bin/blur-lock &
 exec --no-startup-id greenclip daemon &
 exec --no-startup-id sxhkd &
-exec --no-startup-id xwallpaper --zoom ~/.local/share/bg.jpg &
 exec --no-startup-id picom &
 exec --no-startup-id dunst &
 exec --no-startup-id xfce4-power-manager --daemon &
 exec --no-startup-id /home/ahwx/.config/polybar/launch_polybar.sh &
+exec --no-startup-id sshfs eclipse:/mnt/big/general ~/server &
 
 # Use pactl to adjust volume in PulseAudio.
 # set $refresh_i3status killall -SIGUSR1 i3status
@@ -27,33 +26,38 @@ bindsym $mod+Return exec kitty
 bindsym $mod+q kill
 bindsym $mod+Shift+n exec networkmanager_dmenu
 bindsym $mod+d exec dmenu_run -l 25
-bindsym $mod+Shift+a exec ~/.local/bin/qrlipboard
+# bindsym $mod+Shift+a exec ~/.local/bin/qrlipboard
 bindsym $mod+p exec ~/.config/rofi/bin/powermenu
-bindsym $mod+l exec ~/.local/bin/blur-lock
+bindsym $mod2+l exec ~/.local/bin/blur-lock
 bindsym $mod+v exec rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
 bindsym $mod+Shift+w exec walp
 for_window [ title="sxiv" ] floating enable
 for_window [ title="Write: (no subject) - Thunderbird" ] floating enable
-bindsym $mod+Shift+k exec kdeconnect-app
-assign [class="(?i)KDE Connect"] → $music
+bindsym $mod+Shift+p exec kdeconnect-app
+assign [class="(?i)KDE Connect"] → $ws12
 bindsym $mod+Shift+f exec firefox
 bindsym $mod+Shift+q exec qutebrowser
 bindsym $mod+Shift+c exec chromium
+bindsym $mod+Shift+d exec definition_from_clipboard
 bindsym $mod+Shift+s exec signal-desktop
-assign [class="(?i)signal"] → $signal
-bindsym $mod+Shift+e exec element-desktop
-assign [class="(?i)Element"] → $chat
+assign [class="(?i)signal"] → $ws17
+bindsym $mod+Shift+e exec nheko
+bindsym $mod+Ctrl+Shift+e exec killall -q nheko
+assign [class="(?i)Element"] → $ws13
+assign [class="(?i)nheko"] → $ws13
 bindsym $mod+Shift+t exec thunderbird
 for_window [ title="Write: (no subject) - Thunderbird" ] floating enable
-assign [class="(?i)Thunderbird"] → $mail
+assign [class="(?i)Thunderbird"] → $ws11
 bindsym $mod+e exec thunar
+bindsym $mod+Shift+b exec notify-send "Battery" "$(acpi)"
 
 # dock mode settings
 
 bindsym $mod+Shift+bracketleft move container to output left
 bindsym $mod+Shift+bracketright move container to output right
 bindsym $mod+Shift+backslash exec ~/.local/bin/autohdmi
-bindsym $mod+Shift+x exec xrandr --auto && arandr && dock
+bindsym $mod+Shift+x exec xrandr --auto && dock
+bindsym $mod+Shift+a exec arandr && dock
 
 
 bindsym $mod+s exec flameshot gui
@@ -66,6 +70,17 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+
+# same but vim keys
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
+
 
 # split in horizontal orientation
 # bindsym $mod+h split h
@@ -93,25 +108,46 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-set $mail "mail"
-set $music "music"
-set $chat "chat"
-set $server "server"
-set $mov "mov"
-set $docs "docs"
-set $signal "signal"
-set $phone "phone"
+set $ws1 1
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws10 10
+set $ws11 11:mail
+set $ws12 12:music
+set $ws13 13:chat
+set $ws14 14:vpn
+set $ws15 15:mov
+set $ws16 16:docs
+set $ws17 17:signal
+set $ws18 18:phone
 set $meuk "meuk"
+
+# commented because those are not formatted beyond $ws9 and thus if i open ws15 after $ws18, it shows up as a higher one instead of a lower one
+# set $ws1 "1"
+# set $ws2 "2"
+# set $ws3 "3"
+# set $ws4 "4"
+# set $ws5 "5"
+# set $ws6 "6"
+# set $ws7 "7"
+# set $ws8 "8"
+# set $ws9 "9"
+# set $ws10 "10"
+# set $ws11 "mail"
+# set $ws12 "music"
+# set $ws13 "chat"
+# set $ws14 "server"
+# set $ws15 "mov"
+# set $ws16 "docs"
+# set $ws17 "signal"
+# set $ws18 "phone"
+# set $meuk "meuk"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -124,14 +160,14 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-bindsym $mod+F1 workspace $mail
-bindsym $mod+F2 workspace $music
-bindsym $mod+F3 workspace $chat
-bindsym $mod+F4 workspace $server
-bindsym $mod+F5 workspace $mov
-bindsym $mod+F6 workspace $docs
-bindsym $mod+F7 workspace $signal
-bindsym $mod+F8 workspace $phone
+bindsym $mod+F1 workspace $ws11
+bindsym $mod+F2 workspace $ws12
+bindsym $mod+F3 workspace $ws13
+bindsym $mod+F4 workspace $ws14
+bindsym $mod+F5 workspace $ws15
+bindsym $mod+F6 workspace $ws16
+bindsym $mod+F7 workspace $ws17
+bindsym $mod+F8 workspace $ws18
 bindsym $mod+F9 workspace $meuk
 bindsym $mod+F10 workspace $meuk
 bindsym $mod+F11 workspace $meuk
@@ -148,14 +184,14 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-bindsym $mod+Shift+F1 move container to workspace $mail
-bindsym $mod+Shift+F2 move container to workspace $music
-bindsym $mod+Shift+F3 move container to workspace $chat
-bindsym $mod+Shift+F4 move container to workspace $server
-bindsym $mod+Shift+F5 move container to workspace $mov
-bindsym $mod+Shift+F6 move container to workspace $docs
-bindsym $mod+Shift+F7 move container to workspace $signal
-bindsym $mod+Shift+F8 move container to workspace $phone
+bindsym $mod+Shift+F1 move container to workspace $ws11
+bindsym $mod+Shift+F2 move container to workspace $ws12
+bindsym $mod+Shift+F3 move container to workspace $ws13
+bindsym $mod+Shift+F4 move container to workspace $ws14
+bindsym $mod+Shift+F5 move container to workspace $ws15
+bindsym $mod+Shift+F6 move container to workspace $ws16
+bindsym $mod+Shift+F7 move container to workspace $ws17
+bindsym $mod+Shift+F8 move container to workspace $ws18
 bindsym $mod+Shift+F9 move container to workspace $meuk
 bindsym $mod+Shift+F10 move container to workspace $meuk
 bindsym $mod+Shift+F11 move container to workspace $meuk
@@ -174,10 +210,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -201,7 +237,7 @@ bindsym $mod+Ctrl+Right resize grow width 1 px or 1 ppt
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-floating_maximum_size 1920 x 1080
+# floating_maximum_size 1920 x 1080
 
 default_border pixel 0
 default_floating_border pixel 0
