--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,9 +1,35 @@
-[global/wm]
-include-file=~/.config/polybar/colors.ini
-include-file=~/.config/polybar/cpu.ini
-include-file=~/.config/polybar/utils.ini
-include-file=~/.config/polybar/network.ini
-include-file=~/.config/polybar/system.ini
+[colors]
+# nord because it looks kinda good
+black = #191C24
+gray0 = #242933
+gray1 = #2E3440
+gray2 = #3B4252
+gray3 = #434C5E
+gray4 = #4C566A
+gray5 = #60728A
+white0 = #D8DEE9
+white1 = #E5E9F0
+white2 = #ECEFF4
+blue0 = #5E81AC
+blue1 = #81A1C1
+blue2 = #88C0D0
+cyan  = #8FBCBB
+red     = #BF616A
+orange  = #D08770
+yellow  = #EBCB8B
+green   = #A3BE8C
+magenta = #B48EAD
+# xrdb n more
+disabled = ${colors.blue0}
+bar_background = #00000000
+background-alt = #00000000
+background = #00000000
+# background-alt = ${xrdb:background-even:#222}
+foreground-alt = ${xrdb:color8:#222}
+foreground = ${xrdb:foreground:#555}
+primary = #ffb52a
+secondary = #e60053
+alert = ${xrdb:color1:#222}
 
 [bar-base]
 type = bar
@@ -11,14 +37,14 @@ width = 100%
 height = 13pt
 #radius = 0
 dpi = 96
-background = ${colors.background}
-#background = ${colors.bar_background}
+# background = ${colors.background}
+background = ${colors.bar_background}
 foreground = ${colors.foreground}
 line-size = 2pt
-border-size = 3pt
-border-color = ${colors.background}
-padding-left = 0
-padding-right = 0
+border-size = 0pt
+border-color = ${colors.bar_background}
+padding-left = 2
+padding-right = 2
 module-margin = 0
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -31,21 +57,26 @@ font-0 = JetBrains Mono Nerd Font:pixelsize=10;2
 font-1 = JetBrains Mono Nerd Font:pixelsize=10;3
 font-2 = JetBrains Mono Nerd Font:pixelsize=10:antialias=false;3
 font-3 = JetBrains Mono Nerd Font:pixelsize=10;3
+font-4 = Font Awesome 6 Free Solid:pixelsize=10;3
+font-5 = Font Awesome 6 Brands Regular:pixelsize=10;3
+font-6 = Font Awesome 6 Free Regular:pixelsize=10;3
+font-7 = Material Icons:pixelsize=10;3
 
 [bar/top]
 inherit = bar-base
 bottom = false
-modules-left = left xworkspaces right
-modules-center = left space-alt time space-alt space-alt date space-alt right
-modules-right = space left space-alt wlan space-alt right space left cpu-usage space-alt space-alt space-alt cpu-memory space-alt space-alt space-alt cpu-temperature right space space space
+modules-left = xworkspaces
+modules-center = time space space date
+modules-right = space uptime space space space cpu-usage space space space cpu-memory space space space cpu-temperature space
 
 
 [bar/bottom]
 inherit = bar-base
+tray-position = left
 bottom = true
-modules-left = space left space-alt bluetooth space-alt right space space space sep space space space left space-alt network wlan space-alt right space space sep space space downspeed space space space upspeed
-modules-center= left title right
-modules-right = tray space space sep space space volume space space space battery space space sep space space
+modules-left = space bluetooth space sep space dunst space sep space network wlan space sep space downspeed space upspeed
+modules-center= title
+modules-right = space volume space space space backlight space space space battery space
 
 
 [module/xworkspaces]
@@ -128,6 +159,515 @@ interval = 1
 click-left = dmenu-bluetooth &
 label-background= ${colors.background-alt}
 label-foreground= ${colors.foreground}
+
+[module/cpu-usage]
+inherit = module-base
+type = internal/cpu
+interval = 1
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+format-foreground = ${colors.foreground}
+label = "%percentage:2% %"
+click-left = kitty --execute btop
+
+[module/cpu-memory]
+inherit = module-base
+type = internal/memory
+interval = 1
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+label = %used:9%
+format-foreground = ${colors.foreground}
+
+[module/cpu-temperature]
+type=internal/temperature
+
+; Seconds to sleep between updates
+; Default: 1
+interval=1
+
+; Thermal zone to use
+; To list all the zone types, run 
+; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
+; Default: 0
+thermal-zone=3
+
+; Full path of temperature sysfs path
+; Use `sensors` to find preferred temperature source, then run
+; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
+; to find path to desired file
+; Default reverts to thermal zone setting
+; hwmon-path=/sys/devices/virtual/thermal/thermal_zone2/hwmon4/temp1_input
+; hwmon-path=/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input
+; hwmon-path=/sys/devices/platform/coretemp.0/hwmon/hwmon5/temp1_input
+hwmon-path = ${env:HWMON_PATH}
+
+; Base temperature for where to start the ramp (in degrees celsius)
+; Default: 0
+base-temperature=0
+
+; Threshold temperature to display warning label (in degrees celsius)
+; Default: 80
+warn-temperature=90
+
+; Formatting.
+format-prefix=" "
+format-prefix-foreground=${colors.primary}
+format-prefix-background=${colors.background-alt}
+format-warn-prefix=" "
+format-warn-prefix-foreground=${colors.red}
+format-warn-prefix-background=${colors.background-alt}
+format-foreground=${colors.foreground}
+format-background=${colors.background-alt}
+format-font=1
+format-warn-background=${colors.background-alt}
+format-warn-font=1
+label-warn-font=1
+label-font=1
+
+[module/space]
+type = custom/text
+content = " "
+
+[module/space-alt]
+type = custom/text
+content-background = ${colors.background-alt}
+content = " "
+
+[module/left]
+type = custom/text
+content-foreground = ${colors.background-alt}
+content-background = ${colors.background}
+content-font = 2
+content = ""
+
+[module/left-thin]
+type = custom/text
+content-foreground = ${colors.gray1}
+content-background = ${colors.background}
+content-font = 2
+content = " "
+
+[module/right]
+type = custom/text
+content-foreground = ${colors.background-alt}
+content-background = ${colors.background}
+content-font = 2
+content = ""
+
+[module/right-thin]
+type = custom/text
+content-foreground = ${colors.gray1}
+content-background = ${colors.background}
+content-font = 2
+content = " "
+
+[module/sep]
+type = custom/text
+content-font = 4
+content = "󰇙"
+content-padding = 0
+content-foreground = ${colors.gray0}
+
+[module/mod-sep]
+type = custom/text
+content = "|"
+content-padding = 0
+content-foreground = ${colors.background}
+content-background = ${colors.background-alt}
+content-font = 4
+
+[module/sep-alt]
+type = custom/text
+content = |
+content-padding = 0
+content-foreground = ${colors.orange}
+content-background = ${colors.background-alt}
+
+[module/network]
+type=internal/network
+interface-type = wired
+
+interval=1
+accumulate-stats=true
+unknown-as-up=true
+
+format-connected=%{A1:rofi-net &:}%{A3:dunstspeed:}<ramp-signal>%{A}%{A}<label-connected>
+
+format-disconnected=<label-disconnected>
+format-disconnected-prefix=" "
+format-disconnected-prefix-font=5
+
+format-disconnected-foreground=${color.green}
+format-disconnected-background=${color.altblend}
+
+format-disconnected-prefix-foreground=${color.muted}
+format-disconnected-prefix-background=${color.altblend}
+
+label-connected="%{A1:rofi-net &:}%{A3:dunstspeed:}Online%{A}%{A}"
+label-disconnected="%{A1:rofi-net &:}%{A3:dunstspeed:}Offline%{A}%{A}"
+
+label-connected-font=2 
+label-disconnected-font=2
+
+label-connected-foreground=${color.green}
+label-disconnected-foreground=${color.red}
+
+label-connected-background=${color.altblend}
+label-disconnected-background=${color.altblend}
+
+[module/wlan]
+type = internal/network
+interface-type = wireless
+interval = 1
+click-left = kitty --config ~/.config/kitty/padding.conf --execute iwctl
+
+; Disconnected.
+format-disconnected = <label-disconnected>
+label-disconnected = "Offline"
+format-disconnected-prefix = "󰤭  "
+format-disconnected-prefix-foreground = ${colors.red}
+format-disconnected-background = ${colors.background-alt}
+format-disconnected-foreground = ${colors.foreground}
+
+; Connected.
+label-connected = "%essid%"
+format-connected = <ramp-signal> <label-connected>
+format-connected-background = ${colors.background-alt}
+format-connected-foreground = ${colors.foreground}
+ramp-signal-foreground = ${colors.yellow}
+ramp-signal-0 = "󰤯 "
+ramp-signal-1 = "󰤟 "
+ramp-signal-2 = "󰤢 "
+ramp-signal-3 = "󰤨 "
+ramp-signal-4 = "󰤨 "
+
+; Packet loss.
+format-packetloss = <animation-packetloss> <label-connected>
+animation-packetloss-0 = " "
+animation-packetloss-0-foreground = ${colors.orange}
+animation-packetloss-1 = " "
+animation-packetloss-1-foreground = ${colors.orange}
+; Framerate in milliseconds
+animation-packetloss-framerate = 500
+
+;; Using custom script.
+[module/wlan-signal]
+type = custom/script
+label = %output%
+exec = awk 'NR==3 {print $4 "00 dBm"}' /proc/net/wireless
+format-prefix = "ﴽ  "
+format-prefix-foreground = ${colors.yellow}
+format-background = ${colors.background}
+format-foreground = ${colors.foreground}
+interval = 1
+
+[module/upspeed]
+type = internal/network
+interface-type = wireless
+interval = 1
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+label-disconnected = ""
+format-disconnected-prefix = ""
+format-disconnected-prefix-foreground = ${colors.yellow}
+format-connected-prefix = ""
+format-connected-prefix-foreground = ${colors.yellow}
+label-connected = " %upspeed:8%"
+format-connected-background = ${colors.background}
+format-disconnected-background = ${colors.background}
+format-connected-foreground = ${colors.foreground}
+format-disconnected-foregrond = ${colors.foreground}
+
+[module/downspeed]
+type = internal/network
+interface-type = wireless
+interval = 1
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+label-disconnected = ""
+format-disconnected-prefix = ""
+format-disconnected-prefix-foreground = ${colors.yellow}
+format-connected-prefix = ""
+format-connected-prefix-foreground = ${colors.yellow}
+label-connected = " %downspeed:8%"
+format-connected-background = ${colors.background}
+format-disconnected-background = ${colors.background}
+format-connected-foreground = ${colors.foreground}
+format-disconnected-foreground = ${colors.foreground}
+
+
+
+
+[module-base]
+format-background = ${colors.background-alt}
+format-padding = 0
+format-margin = 0
+
+[module/date]
+type = internal/date
+inherit = module-base
+interval = 1
+date = %d %B
+date-alt = %A, %d %B
+label ="%date%"
+label-foreground = ${colors.foreground}
+format-prefix-foreground = ${colors.yellow}
+format-background = ${colors.background-alt}
+format-prefix = "  "
+
+[module/time]
+inherit = module-base
+type = internal/date
+interval = 30
+format-background = ${colors.background-alt}
+date =%H:%M
+format-prefix = "  "
+format-prefix-foreground = ${colors.yellow}
+label-foreground = ${colors.foreground}
+label = "%date%"
+
+[module/volume]
+
+; Settings.
+type=internal/pulseaudio
+; sink=alsa_output.pci-0000_00_1f.3.analog-stereo
+use-ui-max=false
+interval=1
+
+; Label normal.
+format-volume=<label-volume><bar-volume>
+label-volume = "墳 "
+label-volume-foreground=${colors.yellow}
+label-volume-background=${colors.background}
+
+; Label muted.
+format-muted=<label-muted><bar-volume>
+label-muted="ﱝ "
+label-muted-background=${colors.background}
+label-muted-foreground=${colors.red}
+
+; Bar.
+bar-volume-format = %fill%%empty%
+bar-volume-width = 10
+bar-volume-gradient = true
+bar-volume-indicator = "" ; This can be made something else.
+bar-volume-fill = "━"
+bar-volume-empty = "━"
+bar-volume-empty-background= ${colors.background}
+bar-volume-fill-background = ${colors.background}
+bar-volume-indicator-background= ${colors.background}
+bar-volume-empty-foreground = ${colors.gray2}
+bar-volume-fill-foreground = ${colors.green}
+bar-volume-indicator-foreground = ${colors.yellow}
+; We specifically want to use the non antialaised font here.
+bar-volume-fill-font = 3
+bar-volume-empty-font = 3
+
+; Ramp.
+; This is not being used, but can be nice.  I prefer the bar.
+ramp-volume-0="奄 "
+ramp-volume-1="奄 "
+ramp-volume-2="奄 "
+ramp-volume-3="奔 "
+ramp-volume-4="奔 "
+ramp-volume-5="奔 "
+ramp-volume-6="墳 "
+ramp-volume-7="墳 "
+ramp-volume-8="墳 "
+ramp-volume-9="墳 "
+ramp-volume-foreground=${colors.yellow}
+ramp-volume-background=${colors.background}
+
+; Toggle the mute.
+click-right=pavu-toggle
+
+[module/battery]
+
+; Settings.
+inherit=module-base
+type=internal/battery
+full-at=100
+battery=BAT0
+adapter=AC
+poll-interval=30
+time-format=%H:%M
+
+; Charging.
+format-charging=<animation-charging><bar-capacity>
+label-charging-background=${colors.background}
+label-charging-foreground=${colors.foreground}
+; Charging animation!
+animation-charging-0="  "
+animation-charging-1="  "
+animation-charging-2="  "
+animation-charging-3="  "
+animation-charging-4="  "
+animation-charging-foreground=${colors.yellow}
+animation-charging-background=${colors.background}
+animation-charging-framerate=750
+
+; Full.
+label-full="  "
+format-full=<label-full><bar-capacity>
+label-full-background=${colors.background}
+label-full-foreground=${colors.green}
+
+; Discharging.
+label-discharging="  "
+format-discharging=<ramp-capacity><bar-capacity>
+label-discharging-background=${colors.background}
+label-discharging-foreground=${colors.yellow}
+
+; Bar.
+bar-capacity-format = %fill%%empty%
+bar-capacity-width = 10
+bar-capacity-gradient = true
+bar-capacity-indicator = "—"
+bar-capacity-fill = "━"
+bar-capacity-empty = "━"
+bar-capacity-empty-background= ${colors.background}
+bar-capacity-indicator-background= ${colors.background}
+bar-capacity-fill-background= ${colors.background}
+bar-capacity-empty-foreground = ${colors.gray2}
+bar-capacity-fill-foreground = ${colors.green}
+format-bar-capacity-background = ${colors.background}
+; Must use the non antialiased font here.
+bar-capacity-fill-font = 3
+bar-capacity-empty-font = 3
+
+;            
+; Have these here so that the bottom 40% can have changed colors.
+ramp-capacity-0 = "  "
+ramp-capacity-1 = "  "
+ramp-capacity-2 = "  "
+ramp-capacity-3 = "  "
+ramp-capacity-4 = "  "
+ramp-capacity-5 = "  "
+ramp-capacity-6 = "  "
+ramp-capacity-7 = "  "
+ramp-capacity-8 = "  "
+ramp-capacity-9 = "  "
+ramp-capacity-foreground=${colors.yellow}
+ramp-capacity-background=${colors.background}
+ramp-capacity-0-foreground = ${colors.red}
+ramp-capacity-1-foreground = ${colors.red}
+ramp-capacity-2-foreground = ${colors.orange}
+ramp-capacity-3-foreground = ${colors.orange}
+
+[module/backlight]
+
+; Settings.
+type=internal/backlight
+; Use the following command to list available cards:
+; $ ls -1 /sys/class/backlight/
+card=intel_backlight
+use-actual-brightness = true
+
+; Label.
+format=<ramp><bar>
+format-background=${colors.background-alt}
+label=" %percentage%"
+label-foreground=${colors.white1}
+label-background = ${colors.background-alt}
+
+; Bar.
+bar-format = %fill%%empty%
+bar-width = 10
+bar-gradient = true
+bar-indicator = "—"
+bar-fill = "━"
+bar-empty = "━"
+bar-empty-background= ${colors.background}
+bar-fill-background = ${colors.background}
+bar-indicator-background= ${colors.background}
+bar-empty-foreground = ${colors.gray2}
+bar-fill-foreground = ${colors.green}
+bar-indicator-foreground = ${colors.green}
+; Need to use the non antialiased font here.
+bar-empty-font = 3
+bar-fill-font = 3
+
+; Ramp can be nice, not being used.
+ramp-0=" "
+ramp-1=" "
+ramp-2=" "
+ramp-3=" "
+ramp-4=" "
+ramp-5=" "
+ramp-6=" "
+ramp-7=" "
+ramp-8=" "
+ramp-9=" "
+ramp-font=2
+ramp-foreground=${colors.yellow}
+ramp-background=${colors.background-alt}
+
+[module/updates-pacman]
+type = custom/script
+exec = python ~/.config/polybar/scripts/pacman_updates.py
+click-left = kitty --config ~/.config/kitty/padding.conf --execute yay -Syu &
+interval = 1800
+format-prefix = "    "
+label = "%output%"
+format-prefix-foreground= ${colors.yellow}
+format-background = ${colors.background-alt}
+format-foreground = ${colors.foreground}
+
+[module/tray]
+type = internal/tray
+format-background = ${colors.background}
+tray-background = ${colors.background}
+format-padding = 0
+tray-padding = 0
+tray-spacing = 8
+tray-size = 16
+
+[module/github-notifications]
+type = custom/script
+format-prefix-foreground = ${colors.yellow}
+format-foreground = ${colors.foreground}
+format-background = ${colors.background-alt}
+format-prefix = "  "
+label = "%output%"
+exec = python ~/.config/polybar/scripts/github_notifications.py
+interval = 1800
+click-left = chromium --new-window https://github.com/notifications &
+
+; Not being used atm.
+[module/power]
+type = custom/text
+content = " "  
+content-foreground = ${colors.red}
+
+[module/rss]
+type = custom/script
+format-prefix-foreground = ${colors.yellow}
+format-foreground = ${colors.foreground}
+format-background = ${colors.background-alt}
+format-prefix = "   "
+label = "%output%"
+exec = ~/.config/polybar/scripts/rss.sh
+interval = 1800
+click-left = kitty -e newsboat && polybar-msg action "#rss.exec"
+
+[module/dunst]
+type=custom/ipc
+hook-0 = echo "%{A1:dunstctl set-paused true && polybar-msg hook dunst 2:}%{A}" &
+hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:}%{A}" &
+click-left=dnd-switch
+initial=2
+format-font=10
+format-foreground=${color.foreground}
+
+[module/uptime]
+type = custom/script
+label = %output%
+exec = dwm-upt
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+format-prefix = "  "
+format-prefix-foreground = ${colors.primary}
 
 [settings]
 screenchange-reload = true
