change polybar colors

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -132,7 +132,7 @@ type = internal/xworkspaces
 index-sort = true
 ; Focused.
 label-focused = %name%
-label-focused-underline= ${colors.yellow}
+label-focused-underline= ${colors.primary}
 label-focused-background = ${colors.background-alt}
 label-focused-foreground = ${colors.foreground}
 label-focused-padding = 1
@@ -335,7 +335,7 @@ label-connected = "%essid%"
 format-connected = <ramp-signal> <label-connected>
 format-connected-background = ${colors.background-alt}
 format-connected-foreground = ${colors.foreground}
-ramp-signal-foreground = ${colors.yellow}
+ramp-signal-foreground = ${colors.primary}
 ramp-signal-0 = "󰤯 "
 ramp-signal-1 = "󰤟 "
 ramp-signal-2 = "󰤢 "
@@ -357,7 +357,7 @@ type = custom/script
 label = %output%
 exec = awk 'NR==3 {print $4 "00 dBm"}' /proc/net/wireless
 format-prefix = "ﴽ  "
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.primary}
 format-background = ${colors.background}
 format-foreground = ${colors.foreground}
 interval = 1
@@ -370,9 +370,9 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = ""
 format-disconnected-prefix = ""
-format-disconnected-prefix-foreground = ${colors.yellow}
+format-disconnected-prefix-foreground = ${colors.primary}
 format-connected-prefix = ""
-format-connected-prefix-foreground = ${colors.yellow}
+format-connected-prefix-foreground = ${colors.primary}
 label-connected = " %upspeed:8%"
 format-connected-background = ${colors.background}
 format-disconnected-background = ${colors.background}
@@ -387,9 +387,9 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = ""
 format-disconnected-prefix = ""
-format-disconnected-prefix-foreground = ${colors.yellow}
+format-disconnected-prefix-foreground = ${colors.primary}
 format-connected-prefix = ""
-format-connected-prefix-foreground = ${colors.yellow}
+format-connected-prefix-foreground = ${colors.primary}
 label-connected = " %downspeed:8%"
 format-connected-background = ${colors.background}
 format-disconnected-background = ${colors.background}
@@ -412,7 +412,7 @@ date = %d %B
 date-alt = %A, %d %B
 label ="%date%"
 label-foreground = ${colors.foreground}
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.primary}
 format-background = ${colors.background-alt}
 format-prefix = "  "
 
@@ -423,7 +423,7 @@ interval = 30
 format-background = ${colors.background-alt}
 date =%H:%M
 format-prefix = "  "
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.primary}
 label-foreground = ${colors.foreground}
 label = "%date%"
 
@@ -438,7 +438,7 @@ interval=1
 ; Label normal.
 format-volume=<label-volume><bar-volume>
 label-volume = "墳 "
-label-volume-foreground=${colors.yellow}
+label-volume-foreground=${colors.primary}
 label-volume-background=${colors.background}
 
 ; Label muted.
@@ -459,7 +459,7 @@ bar-volume-fill-background = ${colors.background}
 bar-volume-indicator-background= ${colors.background}
 bar-volume-empty-foreground = ${colors.gray2}
 bar-volume-fill-foreground = ${colors.green}
-bar-volume-indicator-foreground = ${colors.yellow}
+bar-volume-indicator-foreground = ${colors.primary}
 ; We specifically want to use the non antialaised font here.
 bar-volume-fill-font = 3
 bar-volume-empty-font = 3
@@ -476,7 +476,7 @@ ramp-volume-6="墳 "
 ramp-volume-7="墳 "
 ramp-volume-8="墳 "
 ramp-volume-9="墳 "
-ramp-volume-foreground=${colors.yellow}
+ramp-volume-foreground=${colors.primary}
 ramp-volume-background=${colors.background}
 
 ; Toggle the mute.
@@ -503,7 +503,7 @@ animation-charging-1="  "
 animation-charging-2="  "
 animation-charging-3="  "
 animation-charging-4="  "
-animation-charging-foreground=${colors.yellow}
+animation-charging-foreground=${colors.primary}
 animation-charging-background=${colors.background}
 animation-charging-framerate=750
 
@@ -517,7 +517,7 @@ label-full-foreground=${colors.green}
 label-discharging="  "
 format-discharging=<ramp-capacity><bar-capacity>
 label-discharging-background=${colors.background}
-label-discharging-foreground=${colors.yellow}
+label-discharging-foreground=${colors.primary}
 
 ; Bar.
 bar-capacity-format = %fill%%empty%
@@ -548,7 +548,7 @@ ramp-capacity-6 = "  "
 ramp-capacity-7 = "  "
 ramp-capacity-8 = "  "
 ramp-capacity-9 = "  "
-ramp-capacity-foreground=${colors.yellow}
+ramp-capacity-foreground=${colors.primary}
 ramp-capacity-background=${colors.background}
 ramp-capacity-0-foreground = ${colors.red}
 ramp-capacity-1-foreground = ${colors.red}
@@ -600,7 +600,7 @@ ramp-7=" "
 ramp-8=" "
 ramp-9=" "
 ramp-font=2
-ramp-foreground=${colors.yellow}
+ramp-foreground=${colors.primary}
 ramp-background=${colors.background-alt}
 
 [module/updates-pacman]
@@ -610,7 +610,7 @@ click-left = kitty --config ~/.config/kitty/padding.conf --execute yay -Syu &
 interval = 1800
 format-prefix = "    "
 label = "%output%"
-format-prefix-foreground= ${colors.yellow}
+format-prefix-foreground= ${colors.primary}
 format-background = ${colors.background-alt}
 format-foreground = ${colors.foreground}
 
@@ -625,7 +625,7 @@ tray-size = 16
 
 [module/github-notifications]
 type = custom/script
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.primary}
 format-foreground = ${colors.foreground}
 format-background = ${colors.background-alt}
 format-prefix = "  "
@@ -642,7 +642,7 @@ content-foreground = ${colors.red}
 
 [module/rss]
 type = custom/script
-format-prefix-foreground = ${colors.yellow}
+format-prefix-foreground = ${colors.primary}
 format-foreground = ${colors.foreground}
 format-background = ${colors.background-alt}
 format-prefix = "   "
