chore(*): add new stuff for the macbook rice

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,16 @@
 # Font configuration
-font_family      ComicShannsMono Nerd Font
-bold_font        ComicShannsMono Nerd Font
-italic_font      ComicShannsMono Nerd Font
-bold_italic_font ComicShannsMono Nerd Font
+
+# font_family      ComicShannsMono Nerd Font # Linux
+# bold_font        ComicShannsMono Nerd Font # Linux
+# italic_font      ComicShannsMono Nerd Font # Linux
+# bold_italic_font ComicShannsMono Nerd Font # Linux
+
+font_family        ComicShannsMono Nerd Font Mono Regular # Darwin
+bold_font          ComicShannsMono Nerd Font Mono Bold # Darwin
+italic_font        ComicShannsMono Nerd Font Mono Regular # Darwin
+bold_italic_font   ComicShannsMono Nerd Font Mono Bold # Darwin
+
+macos_hide_titlebar yes
 
 font_size 13.0
 
@@ -51,6 +59,28 @@ color12                 #839496
 color13                 #6c71c4
 color14                 #93a1a1
 color15                 #fdf6e3
+
+# custom scheme
+foreground   #a6cde7
+background   #101216
+cursor       #a6cde7
+
+color0       #101216
+color8       #748fa1
+color1       #B15D74
+color9       #B15D74
+color2       #58698C
+color10      #58698C
+color3       #A56693
+color11      #A56693
+color4       #D96E8B
+color12      #D96E8B
+color5       #D372A8
+color13      #D372A8
+color6       #5899B5
+color14      #5899B5
+color7       #a6cde7
+color15      #a6cde7
 
 scrollback_lines 5000
 
