--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,10 +38,10 @@ bind -r C-l resize-pane -R 5
 #### basic settings
 
 set-option -g status-justify "left"
-#set-option utf8-default on
-#set-option -g mouse-select-pane
+# set-option utf8-default on
+# set-option -g mouse-select-pane
 set-window-option -g mode-keys vi
-#set-window-option -g utf8 on
+# set-window-option -g utf8 on
 # look'n feel
 set-option -g status-fg cyan
 set-option -g status-bg black
@@ -80,6 +80,8 @@ set-window-option -g clock-mode-colour colour64 #green
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
 set -g set-titles-string "#T"
+
+set -g mouse on
 
 # import
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
