feat: fix mouse accel

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:glorious-model-o {
     sensitivity = 0
-    # force_no_accel = true
+    accel_profile = flat
 }
 
 misc {
