feat(.config/hypr/hyprland.conf): trackpad stuff, volume, others

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ input {
     touchpad {
         natural_scroll = no
         clickfinger_behavior = true
-        tap-to-click = true
+        tap-to-click = false
         disable_while_typing = true # This is needed on Asahi-using-MacBooks, since Asahi trackpad drivers are not "there yet"
     }
 
@@ -171,6 +171,8 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 bind = , XF86MonBrightnessUp, exec, doas brightnessctl s 25+; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
 bind = , XF86MonBrightnessDown, exec, doas brightnessctl s 25-; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
+bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
+bind=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
 # bind = , XF86AudioLowerVolume, exec, 
 # bind = , XF86AudioRaiseVolume, exec, 
 
