feat(.config/hypr/hyprland.conf): keyboard backlight stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,6 +169,8 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
+bind = $mainMod, XF86MonBrightnessUp, exec, ~/.local/bin/kbbl --up 5
+bind = $mainMod, XF86MonBrightnessDown, exec, ~/.local/bin/kbbl --down 5
 bind = , XF86MonBrightnessUp, exec, doas brightnessctl s 25+; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
 bind = , XF86MonBrightnessDown, exec, doas brightnessctl s 25-; notify-send -r 45829 "Brightness is at $(brightnessctl info | grep % | awk '{print $4}' | cut -d\( -f2 | cut -d\) -f1)"
 bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
