feat(.config/hypr/hyprland.conf): adds `lock` shortcut (set to $mainMod SHIFT, L)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -161,6 +161,7 @@ bind = $mainMod, D, exec, $menu
 # bind = $mainMod SHIFT, L, exec, swaylock
 bind = $mainMod SHIFT, S, exec, screenshot
 bind = $mainMod SHIFT, F, exec, firefox
+bind = $mainMod SHIFT, L, exec, lock
 bind = $mainMod SHIFT, E, exec, element-desktop
 bind = $mainMod SHIFT, N, exec, kitty --class floating -e nmtui connect
 
