chore: adds more stuff to `ignore` file

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@ Development
 Documents
 Downloads
 Pictures
+.config/Thunar
+.config/GIMP
+.config/astro
+.config/bashtop
+.config/darktable
+.config/gh
+.config/htop
+.config/obs
+.config/pulse
+.config/yarn
