feat(kitty.conf): forgot what i changed :P

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,16 +1,14 @@
 # Font configuration
 
-# font_family      ComicShannsMono Nerd Font # Linux
-# bold_font        ComicShannsMono Nerd Font # Linux
-# italic_font      ComicShannsMono Nerd Font # Linux
-# bold_italic_font ComicShannsMono Nerd Font # Linux
+font_family      ComicShannsMono Nerd Font # Linux
+bold_font        ComicShannsMono Nerd Font # Linux
+italic_font      ComicShannsMono Nerd Font # Linux
+bold_italic_font ComicShannsMono Nerd Font # Linux
 
-font_family        ComicShannsMono Nerd Font Mono Regular # Darwin
-bold_font          ComicShannsMono Nerd Font Mono Bold # Darwin
-italic_font        ComicShannsMono Nerd Font Mono Regular # Darwin
-bold_italic_font   ComicShannsMono Nerd Font Mono Bold # Darwin
-
-macos_hide_titlebar yes
+#font_family        ComicShannsMono Nerd Font Mono Regular # Darwin
+#bold_font          ComicShannsMono Nerd Font Mono Bold # Darwin
+#italic_font        ComicShannsMono Nerd Font Mono Regular # Darwin
+#bold_italic_font   ComicShannsMono Nerd Font Mono Bold # Darwin
 
 font_size 13.0
 
@@ -24,7 +22,7 @@ enable_audio_bell no
 
 # Aesthetics
 
-background_opacity 0.7
+background_opacity 1
 cursor_blink_interval 0
 url_color               #F5E0DC
 active_border_color     #B4BEFE
@@ -82,7 +80,7 @@ color14      #5899B5
 color7       #a6cde7
 color15      #a6cde7
 
-scrollback_lines 5000
+# scrollback_lines 5000
 
 initial_window_width  20
 initial_window_height 40
