--- a/.config/mako/config
+++ b/.config/mako/config
@@ -11,6 +11,7 @@ max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
 font=monospace 14
+max-history=5000
 
 [urgency=low]
 border-color=#cccccc
