feat(.gitconfig): adds alias for `git lg`

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,10 @@
 [user]
 	email = ahwx@ahwx.org
 	name = Ahwx
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+    required = true
+[alias]
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%Creset' --abbrev-commit
