feat: make new mouse also go flat since i hate accel

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,20 +13,22 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = ~/.local/bin/wbg
-exec-once = waybar & dunst
+exec-once = waybar & mako
 exec-once = gentoo-pipewire-launcher
+exec-once = foot --server
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = foot
+$terminal = footclient
 $fileManager = thunar
 # $menu = wofi --show drun
 $menu = $(tofi-drun)
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+# env = WLR_RENDERER_ALLOW_SOFTWARE,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -56,6 +58,11 @@ gestures {
 device:glorious-model-o {
     sensitivity = 0
     accel_profile = flat
+}
+
+device:cooler-master-cooler-master-mice-dongle-1 {
+   sensitivity = 0
+   accel_profile = flat
 }
 
 misc {
@@ -99,7 +106,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -161,7 +168,7 @@ bind = $mainMod, D, exec, $menu
 # bind = $mainMod SHIFT, L, exec, swaylock
 bind = $mainMod SHIFT, S, exec, screenshot
 bind = $mainMod SHIFT, F, exec, firefox
-bind = $mainMod SHIFT, L, exec, lock
+bind = SUPER SHIFT, L, exec, lock
 bind = $mainMod SHIFT, E, exec, element-desktop
 bind = $mainMod SHIFT, N, exec, kitty --class floating -e nmtui connect
 
@@ -178,6 +185,7 @@ bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%; notify
 bind=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%; notify-send "Volume is at $(pulsemixer --get-volume | cut -d' ' -f1)%"
 # bind = , XF86AudioLowerVolume, exec, 
 # bind = , XF86AudioRaiseVolume, exec, 
+bind = , XF86AudioRecord, exec, lock,
 
 
 
