feat(hypr/hyprland.conf): comply with newest hyprland changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,12 +55,14 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:glorious-model-o {
+device {
+    name = glorious-model-o
     sensitivity = 0
     accel_profile = flat
 }
 
-device:cooler-master-cooler-master-mice-dongle-1 {
+device {
+   name = cooler-master-cooler-master-mice-dongle-1
    sensitivity = 0
    accel_profile = flat
 }
@@ -141,7 +143,7 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this. # Hyprland 0.36 got angry??
 windowrulev2 = float, class:floating
 
 # Fixes NetworkManager TUI (nmtui) window that opens once I click my waybar network icon
