--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -172,6 +172,7 @@ bind = $mainMod SHIFT, S, exec, screenshot
 bind = $mainMod SHIFT, F, exec, firefox
 bind = SUPER SHIFT, L, exec, lock
 bind = $mainMod SHIFT, E, exec, element-desktop
+bind = $mainMod SHIFT, M, exec, /home/liv/.local/src/signal-desktop-unofficial/opt/Signal\ Unofficial/signal-desktop-unofficial
 bind = $mainMod SHIFT, N, exec, kitty --class floating -e nmtui connect
 
 # Special keyboard binds whatever thingies
