chore: revert old old change that didn't even do anything

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -154,7 +154,7 @@ windowrulev2=move 10px 50px, class:kitty, title:NETWORKMANAGER
 windowrulev2=size 770px 703px, class:kitty, title:NETWORKMANAGER
 
 # Makes terminal opaque
-windowrule=opacity 0.3 override 0.3 override,title:^(Foot)$
+#windowrule=opacity 0.3 override 0.3 override,title:^(Foot)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT 
