--- a/.inputrc
+++ b/.inputrc
@@ -1,1 +1,16 @@
 Control-f: "nvim $(fzf)\n"
+
+# If set to ‘on’, Readline performs filename matching and completion in a case-insensitive fashion. 
+set completion-ignore-case on
+
+# This alters the default behaviour of the completion functions. If set to ‘on’, words which have 
+# more than one possible completion cause the matches to be listed immediately instead of ringing the bell.
+set show-all-if-ambiguous on
+
+# Map tab to cycle through all the possible completions.
+TAB: menu-complete
+
+# Map up-arrow and down-arrow to allow the search for completions to the current line from your history.
+# e.g. type “git” and then hit control-p to cycle through all the recent git commands.
+"\e[A":history-search-backward
+"\e[B":history-search-forward
