feat: adds `stat`

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,4 +7,5 @@
 	process = git-lfs filter-process
     required = true
 [alias]
-    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%Creset' --abbrev-commit
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%Creset' --abbrev-commit
+	stat = status
