feat: adds pywal, move launches around so fewer lines are used

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,10 +12,10 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = ~/.local/bin/wbg
-exec-once = waybar & mako
+exec-once = ~/.local/bin/init
+exec-once = waybar & mako & swww-daemon & foot --server
 exec-once = gentoo-pipewire-launcher
-exec-once = foot --server
+# exec-once = ~/.config/hypr/xdg-portal-hyprland
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -72,16 +72,21 @@ misc {
   no_direct_scanout = true # Makes games work, I guess?
 }
 
+source = ~/.config/hypr/colors.conf # pywal
+
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border= rgb(ea76cb) rgb(7287fd) 45deg
-    col.inactive_border= 0x55555555
-    # col.active_border = rgba(99D96E8B) rgba(99D96E8B) 45deg
-    # col.inactive_border = rgba(595959aa)
+    col.active_border = $color10 $color11 90def # pywal
+    # col.inactive_border = $color6 # pywal
+    bezier = linear, 0.0, 0.0, 1.0, 1.0 # pywal
+    # col.active_border= rgb(ea76cb) rgb(7287fd) 45deg # purp/blue gradient
+    col.inactive_border= 0x55555555 # inactive = no border
+    # col.active_border = rgba(99D96E8B) rgba(99D96E8B) 45deg # idk anymore
+    # col.inactive_border = rgba(595959aa) # idk anymore
 
     layout = dwindle
 
@@ -154,7 +159,7 @@ windowrulev2=move 10px 50px, class:kitty, title:NETWORKMANAGER
 windowrulev2=size 770px 703px, class:kitty, title:NETWORKMANAGER
 
 # Makes terminal opaque
-#windowrule=opacity 0.3 override 0.3 override,title:^(Foot)$
+# windowrule=opacity 0.7 override 0.7 override,title:^(zsh)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT 
@@ -168,10 +173,11 @@ bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod SHIFT, L, exec, swaylock
+bind = $mainMod SHIFT, W, exec, zsh -c "cd $HOME/Pictures/Wallpapers/ && sxiv -t *"
 bind = $mainMod SHIFT, S, exec, screenshot
 bind = $mainMod SHIFT, F, exec, firefox
 bind = SUPER SHIFT, L, exec, lock
-bind = $mainMod SHIFT, E, exec, element-desktop
+bind = $mainMod SHIFT, E, exec, /home/liv/.local/src/element-desktop/dist/linux-arm64-unpacked/element-desktop
 bind = $mainMod SHIFT, M, exec, /home/liv/.local/src/signal-desktop-unofficial/opt/Signal\ Unofficial/signal-desktop-unofficial
 bind = $mainMod SHIFT, V, exec, virt-manager
 bind = $mainMod SHIFT, N, exec, kitty --class floating -e nmtui connect
