feat: adds XDG env vars

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,6 +29,9 @@ $menu = $(tofi-drun)
 # Some default env vars.
 env = XCURSOR_SIZE,24
 # env = WLR_RENDERER_ALLOW_SOFTWARE,1
+env = XDG_CURRENT_DESKTOP, Hyprland
+env = XDG_SESSION_TYPE, wayland
+env = XDG_SESSION_DESKTOP, Hyprland
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
