feat: switch from `foot` > `kitty`

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = ~/.local/bin/init
-exec-once = waybar & mako & swww-daemon & foot --server
+exec-once = waybar & mako & swww-daemon
 exec-once = gentoo-pipewire-launcher
 # exec-once = ~/.config/hypr/xdg-portal-hyprland
 
@@ -21,7 +21,7 @@ exec-once = gentoo-pipewire-launcher
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = footclient
+$terminal = kitty
 $fileManager = thunar
 # $menu = wofi --show drun
 $menu = $(tofi-drun)
