--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -176,7 +176,7 @@ bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod SHIFT, L, exec, swaylock
-bind = $mainMod SHIFT, W, exec, zsh -c "cd $HOME/Pictures/Wallpapers/ && sxiv -t *"
+bind = $mainMod SHIFT, W, exec, walp
 bind = $mainMod SHIFT, S, exec, screenshot
 bind = $mainMod SHIFT, F, exec, firefox
 bind = SUPER SHIFT, L, exec, lock
