--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -12,7 +12,7 @@
   "margin-top": 3,
   "margin-bottom": 3,
 
-  "modules-left": ["hyprland/workspaces", "custom/weather"],
+  "modules-left": ["hyprland/workspaces", "custom/weather", "pulseaudio"],
   "modules-center": ["tray"],
-  "modules-right": ["pulseaudio", "backlight", "network", "battery", "clock"]
+  "modules-right": ["battery", "clock"]
 }
