feat: set default branch to master

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,3 +9,5 @@
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%Creset' --abbrev-commit
 	stat = status
+[init]
+	defaultBranch = master
