feat: hyprland changes

--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -1,18 +1,18 @@
-    $foregroundCol = 0xffdf9b99
-    $backgroundCol = 0xff0b0909
-    $color0 = 0xff0b0909
-    $color1 = 0xff4F282E
-    $color2 = 0xff6C3035
-    $color3 = 0xff6D3B43
-    $color4 = 0xff6B4853
-    $color5 = 0xff982E32
-    $color6 = 0xff995359
-    $color7 = 0xffdf9b99
-    $color8 = 0xff9c6c6b
-    $color9 = 0xff4F282E
-    $color10 = 0xff6C3035
-    $color11 = 0xff6D3B43
-    $color12 = 0xff6B4853
-    $color13 = 0xff982E32
-    $color14 = 0xff995359
-    $color15 = 0xffdf9b99
+    $foregroundCol = 0xffc3c6c4
+    $backgroundCol = 0xff1f1511
+    $color0 = 0xff1f1511
+    $color1 = 0xff7E807D
+    $color2 = 0xff918778
+    $color3 = 0xff60748E
+    $color4 = 0xff72879A
+    $color5 = 0xff7992A3
+    $color6 = 0xff78A0C0
+    $color7 = 0xffc3c6c4
+    $color8 = 0xff888a89
+    $color9 = 0xff7E807D
+    $color10 = 0xff918778
+    $color11 = 0xff60748E
+    $color12 = 0xff72879A
+    $color13 = 0xff7992A3
+    $color14 = 0xff78A0C0
+    $color15 = 0xffc3c6c4
