--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,7 +29,7 @@ $menu = $(tofi-drun)
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-# env = WLR_RENDERER_ALLOW_SOFTWARE,1
+env = WLR_RENDERER_ALLOW_SOFTWARE,1
 env = XDG_CURRENT_DESKTOP, Hyprland
 env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
@@ -87,8 +87,10 @@ source = ~/.config/hypr/colors.conf # pywal
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 10
+    #gaps_in = 5
+    #gaps_out = 10
+    gaps_in = 0
+    gaps_out = 0
     border_size = 2
     col.active_border = $color6 # pywal
     # col.inactive_border = $color6 # pywal
@@ -107,7 +109,8 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    # rounding = 10
+    rounding = 0
     
     blur {
         enabled = false
@@ -183,11 +186,13 @@ bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod SHIFT, L, exec, swaylock
-bind = $mainMod SHIFT, W, exec, walp
+bind = $mainMod SHIFT, B, exec, walp
+bind = $mainMod SHIFT, P, exec, pavucontrol
+bind = $mainMod SHIFT, W, exec, wdisplays
 bind = $mainMod SHIFT, S, exec, screenshot
 bind = $mainMod SHIFT, F, exec, firefox
 bind = SUPER SHIFT, L, exec, lock
-bind = $mainMod SHIFT, E, exec, /home/liv/.local/src/element-desktop/dist/linux-arm64-unpacked/element-desktop
+bind = $mainMod SHIFT, E, exec, nix-shell -p element-desktop --run element-desktop # should fix this, not too bothered by it now since it works
 bind = $mainMod SHIFT, M, exec, /home/liv/.local/src/signal-desktop-unofficial/opt/Signal\ Unofficial/signal-desktop-unofficial
 bind = $mainMod SHIFT, V, exec, virt-manager
 bind = $mainMod SHIFT, N, exec, kitty --class floating -e nmtui connect
